--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  # GetX
+  get: ^4.6.1
+
+  #Device ui util
+  flutter_screenutil: ^5.3.1
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
