--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,16 @@ dependencies:
   #Device ui util
   flutter_screenutil: ^5.3.1
 
+  # local storage
+  shared_preferences: ^2.2.1
+  cached_network_image: ^3.3.0
+  flutter_cache_manager: ^3.3.1
+
+  #Third Party SingIn
+  google_sign_in: ^5.3.3
+  firebase_auth: ^4.2.1
+
+
 
 dev_dependencies:
   flutter_test:
@@ -66,9 +76,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
+    - assets/images/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
